Fix missing margin after range input

--- a/assets/css/card.css
+++ b/assets/css/card.css
@@ -69,6 +69,7 @@
   position: relative;
 
   height: 336px;
+  margin-bottom: 25px;
 }
 
 .card__icon {
